[gd_scene load_steps=4 format=3 uid="uid://dvpmawujphnt4"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_ww4c0"]
[ext_resource type="PackedScene" uid="uid://3re7qqgvon86" path="res://scenes/player.tscn" id="2_5qr0i"]
[ext_resource type="PackedScene" uid="uid://3xyqnysih221" path="res://scenes/npc.tscn" id="3_wa4cs"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ww4c0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-408, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(344, 128, 344, 8, 728, 8, 728, 0, 336, 0, 336, 208, 744, 208, 744, 0, 728, 0, 728, 128)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D/CollisionPolygon2D"]

[node name="StaticBody2D2" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PackedVector2Array(208, 128, 208, 120, 240, 120, 240, 128)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D2/CollisionPolygon2D"]
color = Color(0.625597, 0.625597, 0.625597, 1)

[node name="NPC" parent="." instance=ExtResource("3_wa4cs")]
position = Vector2(72, 128)

[node name="Player" parent="." instance=ExtResource("2_5qr0i")]
position = Vector2(160, 128)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -30)
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 184.0
offset_top = 112.0
offset_right = 580.0
offset_bottom = 152.0
scale = Vector2(0.222308, 0.199129)
text = "aqui vai ter um banquinho para come√ßar a pescar"
autowrap_mode = 0

[connection signal="body_entered" from="StaticBody2D2" to="." method="_on_static_body_2d_2_body_entered"]
[connection signal="body_exited" from="StaticBody2D2" to="." method="_on_static_body_2d_2_body_exited"]
[connection signal="input_event" from="StaticBody2D2" to="." method="_on_static_body_2d_2_input_event"]
